# pfms-2026a-Ewongated

./: .gitignore  GIT_HELP.md  README.md
quizzes/quiz0/: README.md  TEST.TXT
quizzes/quiz1/: README.md  TEST.TXT
quizzes/quiz1/a/: CMakeLists.txt  charger.cpp  charger.h  main.cpp  processing.cpp  processing.h
quizzes/quiz1/a/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz1/a/test/: CMakeLists.txt  utest.cpp
quizzes/quiz1/b/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h  shape.h
quizzes/quiz1/b/test/: CMakeLists.txt  utest.cpp
quizzes/quiz2/: README.md  TEST.TXT
quizzes/quiz2/a/: CMakeLists.txt  analysis.cpp  analysis.h  display_race.h  main.cpp
quizzes/quiz2/a/dep/: FindCarLib.cmake
quizzes/quiz2/a/marking/: CMakeLists.txt  utest.cpp  utest2.cpp
quizzes/quiz2/a/test/: CMakeLists.txt  utest.cpp
quizzes/quiz3/: TEST.TXT
quizzes/quiz4/: README.md  TEST.TXT
quizzes/quiz4/a/marking/: CMakeLists.txt  utest2.cpp
quizzes/quiz4/b/: CMakeLists.txt
quizzes/quiz4/b/src/: analysis.cpp  analysis.h  listener.cpp
quizzes/quiz4/b/test/: CMakeLists.txt
quizzes/quiz5/: CMakeLists.txt  TEST.TXT  package.xml
scratch/A2 Main/: ackerman.cpp  controller.h  index.dox  laser.cpp  mission.cpp  ranger.h  skidsteer.cpp  skidsteer.h  sonar.cpp  sonar.h
scratch/A2 Main/test/: CMakeLists.txt  test_ackerman_mission.cpp  test_skidsteer_mission.cpp  test_skidsteer_obstruction.cpp
scratch/A2Deliverable/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  index.dox  laser.cpp  laser.h  logger.cpp  mission.cpp  mission.h  ranger.cpp  ranger.h  skidsteer.cpp  skidsteer.h  sonar.cpp  sonar.h
scratch/A2Deliverable/test/: CMakeLists.txt
scratch/A2Test/: ackerman.cpp  ackerman.h  controller.cpp  controller.h  laser.cpp  laser.h  logger.cpp  main.cpp  mission.cpp  mission.h  ranger.cpp  ranger.h  skidsteer.cpp  skidsteer.h
scratch/A3/: CMakeLists.txt  package.xml
scratch/A3/dox/: index.dox
scratch/A3/include/racing_track_pkg/: racing_track_node.h  track_analyser.h
scratch/A3/launch/: racing_track.launch.py
scratch/A3/src/: main.cpp  racing_track_node.cpp  track_analyser.cpp
scratch/A3/test/: test_goal_in_corridor.cpp  test_obstacle_detection.cpp  test_waypoint_detection.cpp
scratch/a2/: ackerman.cpp  ackerman.h  controller.cpp  index.dox  laser.cpp  laser.h  ranger.cpp  skidsteer.cpp  sonar.cpp  sonar.h
scratch/a2 Skeleton Copy/: laser.h  sonar.cpp
scratch/a2/test/: CMakeLists.txt  test_interrupt_resume.cpp
scratch/a3_racing/: CMakeLists.txt  Doxyfile  mainpage.dox  run_racing.sh
scratch/a3_racing/data/goal_in_corridor/: goal_in_corridor_0.db3  metadata.yaml
scratch/a3_racing/data/goal_out_corridor/: goal_out_corridor_0.db3  metadata.yaml
scratch/a3_racing/data/obstacle_blocked/: metadata.yaml  obstacle_blocked_0.db3
scratch/a3_racing/data/obstacle_clear/: metadata.yaml  obstacle_clear_0.db3
scratch/a3_racing/data/sample/: metadata.yaml  sample_0.db3
scratch/a3_racing/data/waypoint_no_walls/: metadata.yaml  waypoint_no_walls_0.db3
scratch/a3_racing/data/waypoint_visible/: metadata.yaml  waypoint_visible_0.db3
scratch/a3_racing/install/: local_setup.sh  setup.sh
scratch/a3_racing/install/a3_racing/share/a3_racing/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
scratch/a3_racing/install/a3_racing/share/a3_racing/cmake/: a3_racingConfig.cmake
scratch/a3_racing/install/a3_racing/share/ament_index/resource_index/package_run_dependencies/: a3_racing
scratch/a3_racing/install/a3_racing/share/ament_index/resource_index/parent_prefix_path/: a3_racing
scratch/a3_racing/log/: latest_build
scratch/a3_racing/src/: geometry_utils.h  laserprocessing.cpp  laserprocessing.h  main_racing.cpp  racingnode.cpp  racingnode.h
scratch/a3_racing/test/: utest.cpp
skeleton/a1_skeleton/: CMakeLists.txt  fusion.cpp  fusion.h  fusioninterface.h  index.dox  laser.cpp  laser.h  main.cpp  ranger.cpp  ranger.h  sonar.cpp  sonar.h
skeleton/a1_skeleton/test/: CMakeLists.txt  test_fusion.cpp  test_fusion_multi.cpp  test_rawdata.cpp  test_sensors.cpp
tutorials/: .gitignore
tutorials/week00/: README.md
tutorials/week01/: PREWORK.md  README.md  TUTORIAL.md
tutorials/week03/: TUTORIAL.md
tutorials/week03/starter/: CMakeLists.txt  circle.cpp  circle.h  main.cpp  rectangle.cpp  rectangle.h  shape.cpp
tutorials/week04/: README.md  (+1 more)
tutorials/week04/examples/shape/test/: CMakeLists.txt  utest.cpp  utest2.cpp
tutorials/week04/starter/a1_snippets/: CMakeLists.txt  visualise_cells.cpp
tutorials/week06/examples/teleop/: CMakeLists.txt  ackerman.cpp
tutorials/week07/examples/ex02/: CMakeLists.txt  analysis.cpp  sensor.cpp
tutorials/week07/examples/ex03/: CMakeLists.txt  data.h  dataprocessing.cpp  dataprocessing.h  main.cpp  radar.cpp  radar.h
tutorials/week07/starter/ex01/: CMakeLists.txt  main_convar.cpp  main_futures.cpp
tutorials/week08/examples/ex01/: CMakeLists.txt  main.cpp
tutorials/week08/examples/ex01/marking/: CMakeLists.txt  test_constructors.cpp  test_fusion_interface.cpp  test_helper.h  test_ranger_interface.cpp
tutorials/week10/wk10_examples/topics_masterclass/: CMakeLists.txt  package.xml
tutorials/week10/wk10_examples/topics_masterclass/src/: sample.cpp  sample.h
tutorials/week10/wk10_starter/quadcopter_control/: CMakeLists.txt  package.xml
tutorials/week10/wk10_starter/quadcopter_control/src/: controller.cpp  controller.h  quadcopter.cpp  quadcopter.h
tutorials/week11/wk11_examples/services_masterclass/: CMakeLists.txt  package.xml
tutorials/week11/wk11_examples/services_masterclass/src/: controller.cpp  controller.h  controllerinterface.h  main.cpp  quadcopter.cpp  quadcopter.h
tutorials/week11/wk11_starter/grid_example/: CMakeLists.txt  package.xml
tutorials/week11/wk11_starter/grid_example/src/: sample.cpp  simple_demo_node.cpp
tutorials/week11/wk11_starter/services_masterclass/: CMakeLists.txt  package.xml
tutorials/week11/wk11_starter/services_masterclass/src/: controller.cpp  controller.h  quadcopter.cpp  quadcopter.h
(+157 files in other folders)
