<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racing_track_pkg</name>
  <version>1.0.0</version>
  <description>
    A3 Project 3: Racing Track — ROS 2 package for Ackerman platform lap driving.
    Subscribes to odometry, laser scan, and goals; publishes brake/steering/throttle
    commands, waypoints, and visualisation markers; provides a /orange/mission service.
  </description>
  <maintainer email="student@uts.edu.au">Student</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rosbag2_cpp</test_depend>
  <test_depend>rosbag2_storage</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
