<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>week11_quad_solution</name>
  <version>0.0.1</version>
  <description>The week11 tutorial quad task</description>

  <maintainer email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</maintainer>
  <license>TODO</license>
  <author email="Alen.Alempijevic@uts.edu.au">Alen Alempijevic</author> 

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>  
  <depend>tf2_geometry_msgs</depend>
  <!-- Add the std_srvs -->-->
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
<!-- Add the std_srvs -->
</package>
